--- a/form.html
+++ b/form.html
@@ -4,78 +4,41 @@
 <head>
     <title>Exercice table</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <style>
-        label,
-        div {
-            margin: 10px;
-            display: block;
-
-        }
-
-        div {
-            border-bottom: solid 1px grey;
-            width: 200px;
-        }
-
-        input,
-        button,
-        select,
-        #yo {
-            border: none;
-        }
-
-        .sex {
-            display: inline-block;
-        }
-
-
-        button {
-            color: white;
-            padding: 15px;
-        }
-
-        #envoyer {
-            background-color: rgb(0, 132, 255);
-        }
-
-        #effacer {
-            background-color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <form name="inscription" method="GET" action="jsp.js">
+    <form name="inscription" method="POST" action="jsp.js" enctype="multipart/form-data">
         <h2>Inscription</h2>
         <label>
             Nom
             <div>
-                <input type="text" name="nom">
+                <input type="text" name="nom" pattern="[A-Za-z]+" required>
             </div>
         </label>
 
         <label>
             Prénom
             <div>
-                <input type="text" name="prénom">
+                <input type="text" name="prénom" pattern="[A-Za-z]+" required>
             </div>
         </label>
 
         <label>
             Date de naissance
             <div>
-                <input type="date" name="date">
+                <input type="date" name="date" required>
             </div>
         </label>
 
         <label class="sex">
-            <input type="radio" name="sexe" value="femme">
+            <input type="radio" name="sexe" value="femme" required>
             Femme
         </label>
 
         <label class="sex">
-            <input type="radio" name="sexe" value="homme">
+            <input type="radio" name="sexe" value="homme" required>
             Homme
         </label>
 
@@ -84,7 +47,7 @@
         <label>
             Pays
             <div>
-                <select name="sexe">
+                <select name="sexe" required>
                     <option value="Choisissez">Choisissez...</option>
                     <option value="france">France</option>
                     <option value="espagne">Espagne</option>
@@ -93,6 +56,28 @@
                 </select>
             </div>
         </label>
+
+        <label>
+            Courriel
+            <div>
+                <input type="email" name="email" required>
+            </div>
+        </label>
+
+        <label>
+            Mot de passe
+            <div>
+                <input type="password" name="password" pattern="[A-Za-z]+[@#%][1-9][0-9{3}]" required>
+            </div>
+        </label>
+
+        <label>
+            Photo
+            <div>
+                <input type="file" name="photo" accept="image/png,image/jpg" required>
+            </div>
+        </label>
+
     </form>
 
     <div id="yo">
